# csce452_proj3

./: lidar_inter.py  marker.py  package.xml  project3_tracker.py  setup.cfg  setup.py
10-01/: 10-01_0.mcap  metadata.yaml
10-02/: 10-02_0.mcap  metadata.yaml
10-03/: 10-03_0.mcap  metadata.yaml
10-04/: 10-04_0.mcap  metadata.yaml
10-05/: 10-05_0.mcap  metadata.yaml
10-06/: 10-06_0.mcap  metadata.yaml
10-07/: 10-07_0.mcap  metadata.yaml
10-08/: 10-08_0.mcap  metadata.yaml
10-09/: 10-09_0.mcap  metadata.yaml
10-10/: 10-10_0.mcap  metadata.yaml
csce452_proj3/: lidar_inter.py  marker.py
